--- a/config.json
+++ b/config.json
@@ -397,7 +397,7 @@
         }
       }
     },
-    "charliebliss": {
+    "CharlieBliss": {
 	    "WebhookTest": {
 	      "github": {
 	        "labels": {
